welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: ')' expected but '(' found.
  def parcoursColone(tableau:Array[Color](taille)){
                                         ^Array1:16: error: ':' expected but ')' found.
  def parcoursColone(tableau:Array[Color](taille)){
                                                ^Array1:22: error: identifier expected but '}' found.
}
^